// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <ImagesDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <ImagesDetailPanel
      fadeImg={[Function]}
      isBtnShowPanel={true}
      isOpen={false}
      moveImg={[Function]}
      name="imagesPanel"
      title="Image(s) Series"
      zoomin={[Function]}
      zoomout={[Function]}
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper dicom-container"
          >
            <ReactIdSwiper
              ContainerEl="div"
              WrapperEl="div"
              allowTouchMove={true}
              containerClass="swiper-container"
              init={true}
              navigation={
                Object {
                  "nextEl": ".swiper-button-next",
                  "prevEl": ".swiper-button-prev",
                }
              }
              pagination={
                Object {
                  "clickable": true,
                  "el": ".swiper-pagination",
                  "type": "bullets",
                }
              }
              slideClass="swiper-slide"
              spaceBetween={30}
              wrapperClass="swiper-wrapper"
            >
              <div
                key="0"
              >
                <img
                  id="img-0"
                  src="about://46.101.95.245/orthanc/instances/ecd967b0-aaec17a2-860b3925-91d8ef8b-1932d1c8/preview"
                  style={null}
                />
              </div>
            </ReactIdSwiper>
          </div>
        </div>
      </div>
    </ImagesDetailPanel>
  </div>
</div>
`;

exports[`Component <ImagesDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={Object {}}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="imagesDetailPanel"
      title="Image Details"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Modality
              </label>
              <div
                className="form-control-static"
              />
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Protocol Name
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Station Name
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Operator Name
              </label>
              <div
                className="form-control-static"
              />
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Series Date
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Series Time
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Author
              </label>
              <div
                className="form-control-static"
              />
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Series No:
                :
              </label>
              <div
                className="form-control-static"
              />
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <ImagesDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <ImagesDetailPanel
      fadeImg={[Function]}
      isBtnShowPanel={true}
      isOpen={false}
      moveImg={[Function]}
      name="imagesPanel"
      title="Image(s) Series"
      zoomin={[Function]}
      zoomout={[Function]}
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper dicom-container"
          >
            <ReactIdSwiper
              ContainerEl="div"
              WrapperEl="div"
              allowTouchMove={true}
              containerClass="swiper-container"
              init={true}
              navigation={
                Object {
                  "nextEl": ".swiper-button-next",
                  "prevEl": ".swiper-button-prev",
                }
              }
              pagination={
                Object {
                  "clickable": true,
                  "el": ".swiper-pagination",
                  "type": "bullets",
                }
              }
              slideClass="swiper-slide"
              spaceBetween={30}
              wrapperClass="swiper-wrapper"
            >
              <div
                key="0"
              >
                <img
                  id="img-0"
                  src="about://46.101.95.245/orthanc/instances/ecd967b0-aaec17a2-860b3925-91d8ef8b-1932d1c7/preview"
                  style={null}
                />
              </div>
            </ReactIdSwiper>
          </div>
        </div>
      </div>
    </ImagesDetailPanel>
    <PluginDetailPanel
      editedPanel={Object {}}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="imagesDetailPanel"
      title="Image Details"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Modality
              </label>
              <div
                className="form-control-static"
              >
                CT
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Protocol Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    test
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Station Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    CT01OC0
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Operator Name
              </label>
              <div
                className="form-control-static"
              >
                Anonymized
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Series Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    30-Apr-1993
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Series Time
                  </label>
                  <div
                    className="form-control-static"
                  >
                    12:01
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Author
              </label>
              <div
                className="form-control-static"
              >
                test
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Series No:
                :
              </label>
              <div
                className="form-control-static"
              >
                365
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <ImagesDetail /> should renders with props correctly mount 1`] = `
<ImagesDetail
  detail={
    Object {
      "author": "test",
      "instanceIds": Array [
        "d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930",
      ],
      "modality": "CT",
      "operatorsName": "Anonymized",
      "protocolName": "test",
      "seriesDate": 736124400000,
      "seriesNumber": "365",
      "seriesTime": 37644000,
      "source": "orthanc",
      "sourceId": "00d87cf2-13d39285-50905549-3faf78a7-59656dd3",
      "stationName": "CT01OC0",
    }
  }
  expandedPanel="all"
  instanceIds={
    Array [
      "ecd967b0-aaec17a2-860b3925-91d8ef8b-1932d1c9",
    ]
  }
>
  <div
    className="section-detail"
  >
    <div
      className="panel-group accordion"
    >
      <ImagesDetailPanel
        fadeImg={[Function]}
        isBtnShowPanel={true}
        isOpen={false}
        moveImg={[Function]}
        name="imagesPanel"
        title="Image(s) Series"
        zoomin={[Function]}
        zoomout={[Function]}
      >
        <div
          className="panel panel-secondary"
        >
          <PluginDetailHeader
            isBtnShowPanel={true}
            name="imagesPanel"
            title="Image(s) Series"
          >
            <div
              className="panel-heading"
            >
              <div
                className="control-group right"
              >
                <PTButton
                  className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-expand"
                    />
                    <i
                      className="btn-icon fa fa-compress"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-chevron-up"
                    />
                  </button>
                </PTButton>
              </div>
              <h3
                className="panel-title"
              >
                Image(s) Series
              </h3>
            </div>
          </PluginDetailHeader>
          <div
            className="panel-body"
          >
            <div
              className="panel-body-inner"
            >
              <div
                className="form"
              >
                <div
                  className="form-group-wrapper dicom-container"
                >
                  <ReactIdSwiper
                    ContainerEl="div"
                    WrapperEl="div"
                    allowTouchMove={true}
                    containerClass="swiper-container"
                    init={true}
                    navigation={
                      Object {
                        "nextEl": ".swiper-button-next",
                        "prevEl": ".swiper-button-prev",
                      }
                    }
                    pagination={
                      Object {
                        "clickable": true,
                        "el": ".swiper-pagination",
                        "type": "bullets",
                      }
                    }
                    slideClass="swiper-slide"
                    spaceBetween={30}
                    wrapperClass="swiper-wrapper"
                  >
                    <div
                      className="swiper-container"
                    >
                      <div
                        className="swiper-wrapper"
                      >
                        <div
                          className="swiper-slide  "
                          key=".$0"
                        >
                          <img
                            id="img-0"
                            src="about://46.101.95.245/orthanc/instances/ecd967b0-aaec17a2-860b3925-91d8ef8b-1932d1c9/preview"
                            style={null}
                          />
                        </div>
                      </div>
                      <div
                        className="swiper-pagination "
                      />
                      <div
                        className="swiper-button-next "
                      />
                      <div
                        className="swiper-button-prev "
                      />
                    </div>
                  </ReactIdSwiper>
                </div>
              </div>
            </div>
            <div
              className="panel-control"
            >
              <div
                className="control-group center"
              >
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal disabled"
                  id="play"
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal disabled"
                    id="play"
                    type="button"
                  >
                    <i
                      className="btn-icon fa fa-play"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal disabled"
                  id="stop"
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal disabled"
                    id="stop"
                    type="button"
                  >
                    <i
                      className="btn-icon fa fa-stop"
                    />
                  </button>
                </PTButton>
                <div
                  className="control-separate control-separate-sm"
                />
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                  id="zoomIn"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                    id="zoomIn"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="btn-icon fa fa-search-minus"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                  id="zoomOut"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                    id="zoomOut"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="btn-icon fa fa-search-plus"
                    />
                  </button>
                </PTButton>
                <div
                  className="control-separate control-separate-sm"
                />
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                  id="arrows"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                    id="arrows"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="fa fa-arrows"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                  id="verticalArrows"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                    id="verticalArrows"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="fa fa-arrows-v"
                    />
                  </button>
                </PTButton>
              </div>
            </div>
          </div>
        </div>
      </ImagesDetailPanel>
      <PluginDetailPanel
        isBtnShowPanel={true}
        isOpen={false}
        isShowControlPanel={false}
        name="imagesDetailPanel"
        title="Image Details"
      >
        <div
          className="panel panel-secondary"
        >
          <PluginDetailHeader
            isBtnShowPanel={true}
            name="imagesDetailPanel"
            title="Image Details"
          >
            <div
              className="panel-heading"
            >
              <div
                className="control-group right"
              >
                <PTButton
                  className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-expand"
                    />
                    <i
                      className="btn-icon fa fa-compress"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-chevron-up"
                    />
                  </button>
                </PTButton>
              </div>
              <h3
                className="panel-title"
              >
                Image Details
              </h3>
            </div>
          </PluginDetailHeader>
          <div
            className="panel-body"
          >
            <div
              className="panel-body-inner"
            >
              <div
                className="form"
              >
                <div
                  className="form-group-wrapper"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Modality
                    </label>
                    <div
                      className="form-control-static"
                    >
                      CT
                    </div>
                  </div>
                  <div
                    className="row-expand"
                  >
                    <div
                      className="col-expand-left"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="control-label"
                        >
                          Protocol Name
                        </label>
                        <div
                          className="form-control-static"
                        >
                          test
                        </div>
                      </div>
                    </div>
                    <div
                      className="col-expand-right"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="control-label"
                        >
                          Station Name
                        </label>
                        <div
                          className="form-control-static"
                        >
                          CT01OC0
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Operator Name
                    </label>
                    <div
                      className="form-control-static"
                    >
                      Anonymized
                    </div>
                  </div>
                  <div
                    className="row-expand"
                  >
                    <div
                      className="col-expand-left"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="control-label"
                        >
                          Series Date
                        </label>
                        <div
                          className="form-control-static"
                        >
                          30-Apr-1993
                        </div>
                      </div>
                    </div>
                    <div
                      className="col-expand-right"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="control-label"
                        >
                          Series Time
                        </label>
                        <div
                          className="form-control-static"
                        >
                          12:01
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Author
                    </label>
                    <div
                      className="form-control-static"
                    >
                      test
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Series No:
                      :
                    </label>
                    <div
                      className="form-control-static"
                    >
                      365
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </PluginDetailPanel>
    </div>
  </div>
</ImagesDetail>
`;

exports[`Component <ImagesDetail /> should renders with props correctly mount 2`] = `
<ImagesDetail
  detail={
    Object {
      "author": "test",
      "instanceIds": Array [
        "d1d4875a-2a8267c2-2ee4f8f0-3d9e917e-9a141930",
      ],
      "modality": "CT",
      "operatorsName": "Anonymized",
      "protocolName": "test",
      "seriesDate": 736124400000,
      "seriesNumber": "365",
      "seriesTime": 37644000,
      "source": "orthanc",
      "sourceId": "00d87cf2-13d39285-50905549-3faf78a7-59656dd3",
      "stationName": "CT01OC0",
    }
  }
  expandedPanel="all"
  instanceIds={Array []}
>
  <div
    className="section-detail"
  >
    <div
      className="panel-group accordion"
    >
      <ImagesDetailPanel
        fadeImg={[Function]}
        isBtnShowPanel={true}
        isOpen={false}
        moveImg={[Function]}
        name="imagesPanel"
        title="Image(s) Series"
        zoomin={[Function]}
        zoomout={[Function]}
      >
        <div
          className="panel panel-secondary"
        >
          <PluginDetailHeader
            isBtnShowPanel={true}
            name="imagesPanel"
            title="Image(s) Series"
          >
            <div
              className="panel-heading"
            >
              <div
                className="control-group right"
              >
                <PTButton
                  className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-expand"
                    />
                    <i
                      className="btn-icon fa fa-compress"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-chevron-up"
                    />
                  </button>
                </PTButton>
              </div>
              <h3
                className="panel-title"
              >
                Image(s) Series
              </h3>
            </div>
          </PluginDetailHeader>
          <div
            className="panel-body"
          >
            <div
              className="panel-body-inner"
            >
              <div
                className="form"
              >
                <div
                  className="form-group-wrapper dicom-container"
                >
                  <ReactIdSwiper
                    ContainerEl="div"
                    WrapperEl="div"
                    allowTouchMove={true}
                    containerClass="swiper-container"
                    init={true}
                    navigation={
                      Object {
                        "nextEl": ".swiper-button-next",
                        "prevEl": ".swiper-button-prev",
                      }
                    }
                    pagination={
                      Object {
                        "clickable": true,
                        "el": ".swiper-pagination",
                        "type": "bullets",
                      }
                    }
                    slideClass="swiper-slide"
                    spaceBetween={30}
                    wrapperClass="swiper-wrapper"
                  >
                    <div
                      className="swiper-container"
                    >
                      <div
                        className="swiper-wrapper"
                      />
                      <div
                        className="swiper-pagination "
                      />
                      <div
                        className="swiper-button-next "
                      />
                      <div
                        className="swiper-button-prev "
                      />
                    </div>
                  </ReactIdSwiper>
                </div>
              </div>
            </div>
            <div
              className="panel-control"
            >
              <div
                className="control-group center"
              >
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal disabled"
                  id="play"
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal disabled"
                    id="play"
                    type="button"
                  >
                    <i
                      className="btn-icon fa fa-play"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal disabled"
                  id="stop"
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal disabled"
                    id="stop"
                    type="button"
                  >
                    <i
                      className="btn-icon fa fa-stop"
                    />
                  </button>
                </PTButton>
                <div
                  className="control-separate control-separate-sm"
                />
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                  id="zoomIn"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                    id="zoomIn"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="btn-icon fa fa-search-minus"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                  id="zoomOut"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                    id="zoomOut"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="btn-icon fa fa-search-plus"
                    />
                  </button>
                </PTButton>
                <div
                  className="control-separate control-separate-sm"
                />
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                  id="arrows"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                    id="arrows"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="fa fa-arrows"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                  id="verticalArrows"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="btn btn-inverse btn-success btn-none-border btn-icon-normal"
                    id="verticalArrows"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="fa fa-arrows-v"
                    />
                  </button>
                </PTButton>
              </div>
            </div>
          </div>
        </div>
      </ImagesDetailPanel>
      <PluginDetailPanel
        isBtnShowPanel={true}
        isOpen={false}
        isShowControlPanel={false}
        name="imagesDetailPanel"
        title="Image Details"
      >
        <div
          className="panel panel-secondary"
        >
          <PluginDetailHeader
            isBtnShowPanel={true}
            name="imagesDetailPanel"
            title="Image Details"
          >
            <div
              className="panel-heading"
            >
              <div
                className="control-group right"
              >
                <PTButton
                  className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-success btn-inverse btn-square hidden-xs hidden-sm btn-expand-panel"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-expand"
                    />
                    <i
                      className="btn-icon fa fa-compress"
                    />
                  </button>
                </PTButton>
                <PTButton
                  className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-success btn-inverse btn-square btn-toggle-rotate"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-chevron-up"
                    />
                  </button>
                </PTButton>
              </div>
              <h3
                className="panel-title"
              >
                Image Details
              </h3>
            </div>
          </PluginDetailHeader>
          <div
            className="panel-body"
          >
            <div
              className="panel-body-inner"
            >
              <div
                className="form"
              >
                <div
                  className="form-group-wrapper"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Modality
                    </label>
                    <div
                      className="form-control-static"
                    >
                      CT
                    </div>
                  </div>
                  <div
                    className="row-expand"
                  >
                    <div
                      className="col-expand-left"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="control-label"
                        >
                          Protocol Name
                        </label>
                        <div
                          className="form-control-static"
                        >
                          test
                        </div>
                      </div>
                    </div>
                    <div
                      className="col-expand-right"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="control-label"
                        >
                          Station Name
                        </label>
                        <div
                          className="form-control-static"
                        >
                          CT01OC0
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Operator Name
                    </label>
                    <div
                      className="form-control-static"
                    >
                      Anonymized
                    </div>
                  </div>
                  <div
                    className="row-expand"
                  >
                    <div
                      className="col-expand-left"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="control-label"
                        >
                          Series Date
                        </label>
                        <div
                          className="form-control-static"
                        >
                          30-Apr-1993
                        </div>
                      </div>
                    </div>
                    <div
                      className="col-expand-right"
                    >
                      <div
                        className="form-group"
                      >
                        <label
                          className="control-label"
                        >
                          Series Time
                        </label>
                        <div
                          className="form-control-static"
                        >
                          12:01
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Author
                    </label>
                    <div
                      className="form-control-static"
                    >
                      test
                    </div>
                  </div>
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Series No:
                      :
                    </label>
                    <div
                      className="form-control-static"
                    >
                      365
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </PluginDetailPanel>
    </div>
  </div>
</ImagesDetail>
`;
